--- a/Resources/Private/Partials/Component/Components.html
+++ b/Resources/Private/Partials/Component/Components.html
@@ -1,18 +1,13 @@
 <div class="row">
     <div class="col-sm-6">
-        <h2>
-        {f:translate(key: 'fittingComponents', default: 'Components that work well with %s', arguments: {0: currentComponent.name})}
-        </h2>
+        <h2>{f:translate(key: 'fittingComponents', default: 'Components that work well with %s', arguments: {0: currentComponent.name})}</h2>
     </div>
 </div>
 <div class="row">
     <div class="col-sm-12">
           <!-- gradienten für pfeile der Navigation-->
-        <div class="visible-xs gradientLeft"><span class="gradientArrow gradientLeftArrow">&nbsp;</span>
-        </div>
-        <div class="visible-xs gradientRight"><span class="gradientArrow gradientRightArrow">&nbsp;</span>
-        </div>
-
+        <div class="visible-xs gradientLeft"><span class="gradientArrow gradientLeftArrow">&nbsp;</span></div>
+        <div class="visible-xs gradientRight"><span class="gradientArrow gradientRightArrow">&nbsp;</span></div>
         <div id="owlCarouselQuadsRelatedKomponents" class="owl-carousel relatedObjects">
             <f:for each="{components}" as="component">
                 <div class="item">
@@ -21,11 +16,10 @@
                             <h4 class="owlQuadTextHeadline">{component.name}</h4>
                             <p>{component.subtitle}</p>
                         </div>
-
                         <f:link.action action="index" controller="Component" pluginName="Components" pageUid="{settings.componentPage}" arguments="{item: component}">
                             <f:if condition="{component.thumbnail}">
                                 <f:then>
-                                    <f:image src="{component.thumbnail.uid}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" height="283c" width="283c"/>
+                                    <f:image src="{component.thumbnail.uid}" alt="{component.thumbnail.originalResource.title}" treatIdAsReference="TRUE" class="img-responsive" height="283c" width="283c"/>
                                 </f:then>
                                 <f:else>
                                     <f:image src="{f:uri.resource(path: 'art/thumb-anwendung-laufbauhn.png', extensionName: 'template')}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" />
