--- a/Resources/Private/Partials/System/Components.html
+++ b/Resources/Private/Partials/System/Components.html
@@ -18,7 +18,7 @@
 							<p>{component.subtitle}</p>
 						</div>
 						<f:link.action action="index" controller="Component" pluginName="Components" pageUid="{settings.componentPage}" arguments="{item: component}">
-             	<f:image src="{component.thumbnail.uid}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" />
+             				<f:image src="{component.thumbnail.uid}" alt="{component.thumbnail.title}" treatIdAsReference="TRUE" class="img-responsive" />
 						</f:link.action>
 					</div>
 				</div>
