--- a/Resources/Private/Partials/Application/HeaderImage.html
+++ b/Resources/Private/Partials/Application/HeaderImage.html
@@ -6,45 +6,54 @@
 
           <div class="row">
             <div class="col-xs-12">
-          		<f:image src="{currentApplication.image.uid}" alt="{currentApplication.name}" treatIdAsReference="TRUE" class="img-responsive" />
+          		<f:image src="{currentApplication.image.uid}" alt="{currentApplication.image.title}" treatIdAsReference="TRUE" class="img-responsive hidden-xs" />
+          		<f:image src="{currentApplication.imageMobile.uid}" alt="{currentApplication.name}" treatIdAsReference="TRUE" class="img-responsive visible-xs" />
             </div>
           </div>
 
           <div id="quadsOnHeaderimageBackground" class="hidden-xs quadsOnHeaderimageBackground">
-
             <div class="headerimageToolbar">
-
-              <a class="headerimageToolbarBTN col-05" href="#passendeSysteme">
-        				<img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-system.png', extensionName: 'template')}">
+              <a class="headerimageToolbarBTN col-05" title="{currentApplication.name} System" href="#passendeSysteme">
+                <img class="img-responsive" alt="Icon: Toolbar System" src="{f:uri.resource(path: 'art/icon-toolbar-system.png', extensionName: 'template')}">
               </a>
-
-              <a class="headerimageToolbarBTN col-05" href="#weitereInformationen">
-								<img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}">
-        			</a>
-
+              <a class="headerimageToolbarBTN col-05" title="{currentApplication.name} Information" href="#weitereInformationen">
+                <img class="img-responsive" alt="Icon: Toolbar Info" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}">
+              </a>
             </div>
 
             <div class="row">
-
               <div class="col-sm-1 onePxPadding">
-              	<img class="img-responsive" src="{f:uri.resource(path: 'art-global/logo-readytobuild-var.png', extensionName: 'template')}">
+                <img class="img-responsive" alt="Logo: Ready to Build" src="{f:uri.resource(path: 'art-global/logo-readytobuild-var.png', extensionName: 'template')}">
               </div>
 
-              <div class="col-sm-7 onePxPadding">
-                <f:render partial="HeaderCarousel" arguments="{items: applications, currentItem: currentApplication, fallbackImage: 'art/system-bilderheader.png'}" />
-          		</div>
+              <div class="col-sm-7 onePxPadding lightfont">
+                <f:render partial="HeaderCarousel" arguments="{items: applications, currentItem: currentApplication, fallbackImage: 'art/system-bilderheader.png'}"/>
+              </div>
 
-          		<div class="row">
-              	<div class="col-sm-3 onePxPadding">&nbsp;</div>
-              	<div class="col-sm-4 onePxPadding">
-                  <h2 class="mainSummary">{currentApplication.teaser -> f:format.nl2br()}</h2>
-              	</div>
-          		</div>
+              <div class="row">
+                <div class="col-sm-1 onePxPadding">&nbsp;</div>
+                <div class="col-sm-3 headerImgDescription application">
+                  <h2 class="mainSummary">{currentApplication.name -> f:format.nl2br()}</h2>
+                  <p>{currentApplication.teaser -> f:format.nl2br()}</p>
+                </div>
+              </div>
 
-        		</div>
-        	</div>
+            </div>
+          </div>
         </div>
+
+        <div class="readyToBuildLogo visible-xs">
+          <div class="row">
+            <div class="col-sm-1 onePxPadding"><img src="{f:uri.resource(path: 'art-global/logo-readytobuild-var.png', extensionName: 'template')}" alt="Logo: Ready to build" class="img-responsive"></div>
+          </div>
+        </div>
+        <div class="headerimageToolbar visible-xs">
+          <a href="#passendeSysteme" title="{currentApplication.name} System" class="headerimageToolbarBTN col-4"><img src="{f:uri.resource(path: 'art/icon-toolbar-system.png', extensionName: 'template')}" class="img-responsive"><span>{f:translate(key: 'systems')}</span></a>
+          <a href="#weitereInformationen" title="{currentApplication.name} Information" class="headerimageToolbarBTN col-4"><img src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}" class="img-responsive"><span>{f:translate(key: 'informations')}</span></a>
+        </div>
+        <h1 class="mainHeadline subpage visible-xs">{currentApplication.name}</h1>
       </div>
+
     </div>
   </div>
 </div>
