--- a/Resources/Private/Partials/System/Contact.html
+++ b/Resources/Private/Partials/System/Contact.html
@@ -3,23 +3,14 @@
 
     <!-- Anfrage Step 1 -->
     <div class="anfrage-step-1">
-        <div class="row">
-            <div class="col-sm-6">
-                <h2><f:translate key="inquireComponents" default="request components"/></h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>
-            </div>
-        </div>
+
         <div class="row">
             <div class="col-sm-12">
-                <table class="firstTable">
+                <table class="firstTable hidden-xs">
                     <colgroup width="25%" span="4"></colgroup>
                     <tr>
                         <td><f:translate key="claimToTheSurface" default="claimToTheSurface"/></td>
-                        <td><f:translate key="costs" default="costs"/></td>
+                        <!--<td><f:translate key="costs" default="costs"/></td>-->
                         <td><f:translate key="synonyms" default="synonyms"/></td>
                         <td><f:translate key="fieldsOfApplication" default="fieldsOfApplication"/></td>
                     </tr>
@@ -33,26 +24,76 @@
                             </m:star>
                             </ul>
                         </td>
-                        <td>
-                            {currentSystem.cost}
-                        </td>
+                        <!--<td>-->
+                            <!--{currentSystem.cost}-->
+                        <!--</td>-->
                         <td>{currentSystem.synonym}</td>
                         <td>{currentSystem.application -> f:format.raw()}</td>
                     </tr>
                 </table>
-                <table>
+                <table class="systemDescription hidden-xs">
                     <colgroup width="50%" span="2"></colgroup>
                     <tr>
                         <td><f:translate key="systemDescription" default="systemDescription"/></td>
                         <td><f:translate key="typePer" default="typePer"/> {currentSystem.standard}</td>
                     </tr>
                     <tr>
+                        <td>{currentSystem.featureDescription -> f:format.raw()}</td>
+                        <td>{currentSystem.description}</td>
+                    </tr>
+                </table>
+
+
+                <table class="firstTable visible-xs">
+                    <colgroup width="25%" span="4"></colgroup>
+                    <tr>
+                        <th><f:translate key="claimToTheSurface" default="claimToTheSurface"/></th>
+                    </tr>
+                    <tr>
                         <td>
-                            {currentSystem.featureDescription -> f:format.raw()}
+                            <ul class="status statusStars">
+                                <m:star active="{currentSystem.requirement}" total="5">
+                                    <f:for each="{stars}" as="star">
+                                        <li {f:if(condition: star.active, then: 'class="active"')}>&nbsp;</li>
+                                    </f:for>
+                                </m:star>
+                            </ul>
                         </td>
-                        <td>
-                            {currentSystem.description}
-                        </td>
+                    </tr>
+                    <!--<tr>-->
+                        <!--<th><f:translate key="costs" default="costs"/></th>-->
+                    <!--</tr>-->
+                    <!--<tr>-->
+                        <!--<td>-->
+                            <!--{currentSystem.cost}-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                    <tr>
+                        <th><f:translate key="synonyms" default="synonyms"/></th>
+                    </tr>
+                    <tr>
+                        <td>{currentSystem.synonym}</td>
+                    </tr>
+                    <tr>
+                        <th><f:translate key="fieldsOfApplication" default="fieldsOfApplication"/></th>
+                    </tr>
+                    <tr>
+                        <td>{currentSystem.application -> f:format.raw()}</td>
+                    </tr>
+                </table>
+                <table class="systemDescription visible-xs">
+                    <colgroup width="50%" span="2"></colgroup>
+                    <tr>
+                        <th><f:translate key="systemDescription" default="systemDescription"/></th>
+                    </tr>
+                    <tr>
+                        <td>{currentSystem.featureDescription -> f:format.raw()}</td>
+                    </tr>
+                    <tr>
+                        <th><f:translate key="typePer" default="typePer"/> {currentSystem.standard}</th>
+                    </tr>
+                    <tr>
+                        <td>{currentSystem.description}</td>
                     </tr>
                 </table>
             </div>
@@ -61,25 +102,42 @@
     </div>
     <!-- ENDE Anfrage Step 1-->
     <!-- Anfrage step 2-->
+    <div class="row">
+        <div class="col-sm-6">
+            <h2><f:translate key="inquireComponents" default="request components"/></h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>
+        </div>
+    </div>
     <div class="anfrage-step-1">
         <div class="row">
             <div class="col-sm-6">
                 <h2 id="form-contact">{f:translate(key: 'personalInformation')}</h2>
             </div>
         </div>
+
         <div class="row">
-            <div class="col-sm-6">
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-            </div>
-        </div>
-        <div class="row">
-            <f:form action="contact" additionalAttributes="{role: 'form'}" class="main-contact" section="form-contact" >
-                <f:form.hidden name="component" value="{currentComponent}" />
+            <f:form id="contactForm" action="contact" additionalAttributes="{role: 'form'}" class="main-contact" section="form-contact" >
+                <f:form.hidden name="system" value="{currentSystem}" />
                 <div class="col-sm-6">
                     <div class="form-group">
+                        <div class="radio">
+                            <label><f:form.radio name="unit"  value="m²" checked="checked" /> m²</label>
+                            <label><f:form.radio name="unit" value="yards²" /> yards²</label>
+                            <label><f:form.radio name="unit" value="feets²" /> feets²</label>
+                        </div>
 
+                        <f:form.validationResults for="squareMeasure">
+                            <f:form.textfield name="squareMeasure" additionalAttributes="{aria-required:'true'}" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="squareMeasure" placeholder="{f:translate(key: 'placeholderSquareMeasure', default: 'area in m² *')}" />
+                            <f:if condition="{validationResults.flattenedErrors}">
+                                <p class="text-danger"><f:translate key="errorSquareMeasure" default="Please enter a area!"/></p>
+                            </f:if>
+                        </f:form.validationResults>
                         <f:form.validationResults for="clientName">
-                            <f:form.textfield name="clientName" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientName" placeholder="{f:translate(key: 'placeholderName', default: 'your name*')}" />
+                            <f:form.textfield name="clientName" additionalAttributes="{aria-required:'true'}" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientName" placeholder="{f:translate(key: 'placeholderName', default: 'your name*')}" />
                             <f:if condition="{validationResults.flattenedErrors}">
                                 <p class="text-danger"><f:translate key="errorName" default="please enter your name!"/></p>
                             </f:if>
@@ -88,7 +146,7 @@
                         <f:form.textfield name="clientCompany" class="form-control" id="clientCompany" placeholder="Firma" />
 
                         <f:form.validationResults for="clientEmail">
-                            <f:form.textfield name="clientEmail" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientEmail" placeholder="{f:translate(key: 'placeholderEmail', default: 'your e-mail *')}" />
+                            <f:form.textfield name="clientEmail" additionalAttributes="{aria-required:'true'}" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientEmail" placeholder="{f:translate(key: 'placeholderEmail', default: 'your e-mail *')}" />
                             <f:if condition="{validationResults.flattenedErrors}">
                                 <p class="text-danger"><f:translate key="errorEmail" default="please enter a real e-mail address!"/></p>
                             </f:if>
@@ -99,13 +157,8 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <f:form.validationResults for="squareMeasure">
-                            <f:form.textfield name="squareMeasure" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="squareMeasure" placeholder="{f:translate(key: 'placeholderSquareMeasure', default: 'area in m² *')}" />
-                            <f:if condition="{validationResults.flattenedErrors}">
-                                <p class="text-danger"><f:translate key="errorSquareMeasure" default="Please enter a area!"/></p>
-                            </f:if>
-                        </f:form.validationResults>
-
+                        <p class="radio">{f:translate(key: 'infoColorSample')}</p>
+                        <f:form.select name="colorSample" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="colorSample" options="{colors}" />
                         <f:form.textarea name="clientMessage" class="form-control" id="clientMessage" rows="3" placeholder="{f:translate(key: 'placeholderClientMessage', default: 'comments')}" />
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-6">
@@ -119,3 +172,4 @@
     </div>
 
 </div>
+
