--- a/Resources/Private/Templates/System/Index.html
+++ b/Resources/Private/Templates/System/Index.html
@@ -1,13 +1,15 @@
 <f:render partial="System/HeaderImage" arguments="{systems: systems, currentSystem: currentSystem}" />
 
-<f:render partial="System/MobileNavigation" arguments="{systems: systems}" />
+<f:render partial="System/MobileNavigation" arguments="{systems: systems, currentSystem: currentSystem}" />
 
 <div class="content">
 		<div class="container">
 			<f:render partial="System/Components" arguments="{currentSystem: currentSystem}" />
 
-			<!-- <f:render partial="System/MoreInformation" arguments="{currentSystem: currentSystem}" /> -->
+			 <f:render partial="System/MoreInformation" arguments="{currentSystem: currentSystem}" />
 
-			<f:render partial="System/Contact" arguments="{currentSystem: currentSystem}" />
+			 <f:render partial="System/Layers" arguments="{currentSystem: currentSystem}" />
+
+			<f:render partial="System/Contact" arguments="{currentSystem: currentSystem, colors:colors}" />
 		</div>
 </div>
